Preserve deterministic score diff order